# client

./: CMakeLists.txt  FileReader.cpp  FileReader.h  README.md  UniqueWordsCounter.cpp  UniqueWordsCounter.h  WordsCounter.cpp  WordsCounter.h  client.cpp  main.cpp  server.cpp  toilet.cpp  udp_client.h  wrapsock.h  wrapstdio.h
src/: StreamDispatcher.cpp  StreamDispatcher.h  WordsCollection.cpp  WordsCollection.h  WordsCounter.cpp  WordsCounter.h  main.cpp
src/core/: ExecutionPool.cpp  ExecutionQueue.h  ThreadWorker.cpp
src/execq/: CancelTokenProvider.cpp  CancelTokenProvider.h  ExecutionPool.cpp  ExecutionPool.h  ExecutionQueue.h  ExecutionStream.cpp  ExecutionStream.h  IExecutionQueue.h  IExecutionStream.h  TaskProviderList.cpp  TaskProviderList.h  ThreadWorker.cpp  ThreadWorker.h  execq.cpp  execq.h  execq_private.h
